# mj-score-eval

./: .gitconfig  .gitignore  LICENSE  Mahjong.cabal  Makefile  README.md  README.md~  cabal.sandbox.config  make.bat  mj-score-eval.cabal  mj-scoring-guide  stack.yaml
.cabal-sandbox/: add-source-timestamps
Game/Mahjong/: Example.hs  Hand.hs  Meld.hs  Pattern.hs  Score.hs  Tile.hs
app/: Main.hs
docs/: mj-scoring-guide  mj-scoring-guide~  searchterm
haskell-proto/: mj-base.hs
haskell-ver/: mj-base.hi  mj-base.hs
img/: Thumbs.db
img/tileset1/: Thumbs.db
proto/: Chart.hs  ExamplesScore.hs  Hand.hs  Score.hs  Tile.hs  chart.py  examples_hand.py  examples_score.hs  examples_score.py  fp.py  hand.py  maybe.py  score.py  test_score.py  tile.hs  tile.py
python-ver/: fp.py  hand.py  test.py  tile.py  util.py
source/: Score.hs  conf.py  index.rst
src/: Chart.hs  Meld.hs  Tile.hs  chart.py  examples_score.py  fp.py  hand.py  maybe.py  score.py  test.py  test_hand.py  test_score.py  tile.py
src/Game/Mahjong/: Class.hs  Example.hs  Examples.hs  Generate.hs  Hand.hs  HandStat.hs  Meld.hs  MeldGen.hs  Pattern.hs  Predicates.hs  Score.hs  Tile.bak  Tile.hs  Wall.hs
src/Game/Mahjong/Experimental/: Hand.hs  Meld.hs  Predicates.hs  Tile.hs
src/Game/Mahjong/Internal/: Class.hs  Hand.hs  Meld.hs  Predicate.hs  Predicates.hs  Score.hs  Tile.hs
src/Game/Mahjong/Internal/Try/: Tile_TypeClass_Approach.hs
src/Game/Mahjong/Meld/: Generate.hs  Predicates.hs
src/Game/Mahjong/Static/: Examples.hs  Melds.hs  Tiles.hs
src/Game/Mahjong/Tile/: Collections.hs  Predicates.hs
test/: Tests.hs
test/Game/Mahjong/Test/: Class.hs  Hand.hs  HandStat.hs  Meld.hs  Score.hs  Tile.hs  Wall.hs
test/Game/Mahjong/Test/Static/: Examples.hs  Melds.hs  Tiles.hs
tests/: TileTest.hs
web/: config.json
web/css/: index.css
web/html/: index.html
web/js/: index.js  mj.js
