name:                mj-score-eval
version:             0.1.0.0
synopsis:            A mahjong hand score evalutor based on Zung Jung scoring system.
description:         Please see README.md
homepage:            https://github.com/gspindels/mj-score-eval#readme
license:             MIT
license-file:        LICENSE
author:              Joseph Ching
maintainer:          joseph.m.ching@gmail.com
copyright:           2016 Joseph Ching
category:            Game
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Game.Mahjong.Class,
                       Game.Mahjong.Tile,
                       Game.Mahjong.Static.Tiles,
                       Game.Mahjong.Wall,
                       Game.Mahjong.Meld,
                       Game.Mahjong.Static.Melds,
                       Game.Mahjong.Hand,
                       Game.Mahjong.Pattern,
                       Game.Mahjong.Static.Examples,
                       Game.Mahjong.Score
  --                   Game.Mahjong.Generate
  other-modules:
  build-depends:       base,
                       containers,
                       random >=1.2,
                       text
  default-language:    Haskell2010

executable mj-score-eval-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -W -Wall
  build-depends:       base
                     , mj-score-eval
  default-language:    Haskell2010

test-suite mj-score-eval-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Tests.hs
  other-modules:       Game.Mahjong.Test.Class,
                       Game.Mahjong.Test.Tile,
                       Game.Mahjong.Test.Meld,
                       Game.Mahjong.Test.Score
  build-depends:       base,
                       mj-score-eval,
                       QuickCheck,
                       tasty,
                       tasty-quickcheck,
                       tasty-smallcheck,
                       tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gspindles/mj-score-eval
